--- a/package.json
+++ b/package.json
@@ -1,18 +1,39 @@
 {
   "name": "physics-simulator",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:unit": "vitest",
+    "test:e2e": "nightwatch tests/e2e/*",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.4.15"
+    "pinia": "^2.1.7",
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@nightwatch/vue": "^3.1.0",
+    "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^5.0.3",
-    "vite": "^5.1.0"
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/test-utils": "^2.4.4",
+    "chromedriver": "^121.0.0",
+    "eslint": "^8.49.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "geckodriver": "^4.3.1",
+    "jsdom": "^24.0.0",
+    "nightwatch": "^3.4.0",
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "vite": "^5.0.11",
+    "vite-plugin-nightwatch": "^0.4.6",
+    "vitest": "^1.2.2"
   }
 }
